Budget Container Revision Fixed spacing, margins, text-wrapping. Made sure elements adjust to size and user may scroll. Adjusted thickness of border as well.

--- a/frontend/src/budget/bstyles.css
+++ b/frontend/src/budget/bstyles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .new-budget-button {
@@ -18,7 +18,7 @@ body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-left: 2vw;
+    margin-left: 10%;
     margin-top: 2vh;
     box-shadow: .5vh 1vh .5vh .5vh rgba(0, 0, 0, 0.2);
 }
@@ -51,3 +51,4 @@ body {
     text-shadow: 0.25vw 0.5vw 1vw rgba(0, 0, 0, 0.6);
     color: white;
 }
+
